--- a/translations/fr/fof-sentry.json
+++ b/translations/fr/fof-sentry.json
@@ -2,10 +2,10 @@
     "fof-sentry": {
         "admin": {
             "settings": {
-                "dsn_label": "",
-                "user_feedback_label": "",
-                "javascript_label": "",
-                "javascript_console_label": "",
+                "dsn_label": "Nom de la source de données (DSN) Sentry",
+                "user_feedback_label": "Commentaires des utilisateurs",
+                "javascript_label": "Signaler des erreurs JavaScript",
+                "javascript_console_label": "Capturer la console JavaScript",
                 "javascript_trace_sample_rate": "",
                 "monitor_performance_label": ""
             }
