--- a/translations/fr/fof-share-social.json
+++ b/translations/fr/fof-share-social.json
@@ -2,25 +2,25 @@
     "fof-share-social": {
         "forum": {
             "discussion": {
-                "share_button": ""
+                "share_button": "Partager"
             },
             "modal": {
-                "title": ""
+                "title": "Partager"
             }
         },
         "lib": {
             "networks": {
-                "facebook": "",
-                "twitter": "",
-                "linkedin": "",
-                "reddit": "",
-                "whatsapp": "",
-                "telegram": "",
-                "vkontakte": "",
-                "odnoklassniki": "",
-                "my_mail": "",
-                "qq": "",
-                "qzone": ""
+                "facebook": "Facebook",
+                "twitter": "Twitter",
+                "linkedin": "LinkedIn",
+                "reddit": "Reddit",
+                "whatsapp": "WhatsApp",
+                "telegram": "Telegram",
+                "vkontakte": "VKontakte",
+                "odnoklassniki": "Odnoklassniki",
+                "my_mail": "My World",
+                "qq": "QQ",
+                "qzone": "QZone"
             }
         }
     }
