Importing "fof-socialprofile" component from "https://raw.githubusercontent.com/rooaaar/lang-french-extended/master/locale/fof-socialprofile.yml".

--- a/translations/fr/fof-socialprofile.json
+++ b/translations/fr/fof-socialprofile.json
@@ -2,15 +2,15 @@
     "fof-socialprofile": {
         "forum": {
             "edit": {
-                "edit": "",
-                "add": "",
-                "headtitle": "",
-                "title": "",
-                "url": "",
-                "submit": "",
-                "delete": "",
-                "deletetitle": "",
-                "save_disabled_fetching_favicons": ""
+                "edit": "Modifier",
+                "add": "Ajouter",
+                "headtitle": "Bouton de modification",
+                "title": "Titre",
+                "url": "URL",
+                "submit": "Enregistrer",
+                "delete": "Supprimer",
+                "deletetitle": "Bouton de suppression",
+                "save_disabled_fetching_favicons": "Une ou plusieurs icônes sont en cours de récupération. S’il vous plaît, patientez."
             }
         }
     }
