--- a/translations/fr/fof-spamblock.json
+++ b/translations/fr/fof-spamblock.json
@@ -2,13 +2,13 @@
     "fof-spamblock": {
         "forum": {
             "user_controls": {
-                "spammer_button": "",
-                "spammer_confirmation": ""
+                "spammer_button": "Spammeur",
+                "spammer_confirmation": "Êtes-vous sûr de vouloir\n• Masquer toutes les discussions et les messages de l’utilisateur\n• [flarum/suspend] Suspendre l’utilisateur"
             }
         },
         "admin": {
             "permissions": {
-                "spamblock_users_label": ""
+                "spamblock_users_label": "Marquer l’utilisateur comme spammeur"
             }
         }
     }
