--- a/translations/fr/fof-split.json
+++ b/translations/fr/fof-split.json
@@ -2,22 +2,22 @@
     "fof-split": {
         "admin": {
             "permissions": {
-                "split_discussion_label": ""
+                "split_discussion_label": "Diviser les messages des discussions"
             }
         },
         "forum": {
             "post": {
-                "was_split_to": "",
-                "was_split_from": ""
+                "was_split_to": "{count} message a été séparé vers {target}.|{count} messages ont été séparés vers {target}.",
+                "was_split_from": "{count} message a été séparé de {target}.|{count} messages ont été séparés de {target}."
             },
             "split": {
-                "from": "",
-                "to": ""
+                "from": "Diviser à partir d’ici",
+                "to": "Diviser jusque-là"
             },
             "modal": {
-                "title": "",
-                "new_discussion_label": "",
-                "submit_button": ""
+                "title": "Diviser la discussion",
+                "new_discussion_label": "Préciser le titre de la nouvelle discussion",
+                "submit_button": "Diviser"
             }
         }
     }
