--- a/translations/fr/fof-subscribed.json
+++ b/translations/fr/fof-subscribed.json
@@ -2,38 +2,38 @@
     "fof-subscribed": {
         "forum": {
             "settings": {
-                "defaults_label": "",
-                "forced_label": "",
-                "notify_discussion_created_label": "",
-                "notify_post_unapproved_label": "",
-                "notify_user_created_label": ""
+                "defaults_label": "Définir \"{setting}\" activé par défaut",
+                "forced_label": "Forcer l’activation de  \"{setting}\" pour tout le monde",
+                "notify_discussion_created_label": "Quelqu’un a créé une discussion",
+                "notify_post_unapproved_label": "Un message publié doit être approuvé",
+                "notify_user_created_label": "Quand quelqu’un s’inscrit"
             },
             "notifications": {
-                "discussion_created_text": "",
-                "post_unapproved_text": "",
-                "user_created_text": ""
+                "discussion_created_text": "{username} a créé une discussion",
+                "post_unapproved_text": "{username} a publié un message qui nécessite une approbation",
+                "user_created_text": "{username} vient de s’inscrire"
             }
         },
         "admin": {
             "menu": {
-                "description": ""
+                "description": "Configurer les abonnements des utilisateur (par défaut)"
             },
             "permission": {
-                "subscribe_to_discussion_created": "",
-                "subscribe_to_post_unapproved": "",
-                "subscribe_to_user_created": ""
+                "subscribe_to_discussion_created": "Recevoir une notification lors d’une nouvelle discussion",
+                "subscribe_to_post_unapproved": "Autorisé à recevoir des notifications sur les nouveaux messages non approuvés",
+                "subscribe_to_user_created": "Recevoir une notification lorsqu’il y a un nouvel utilisateur"
             }
         },
         "email": {
             "subject": {
-                "newDiscussion": "",
-                "newUser": "",
-                "postUnapproved": ""
+                "newDiscussion": "[Subscribed | New Discussion] {title}",
+                "newUser": "[Subscribed | New User] {username}",
+                "postUnapproved": "[Subscribed | Unapproved] {username} a publié {title}"
             },
             "body": {
-                "newDiscussion": "",
-                "newUser": "",
-                "postUnapproved": ""
+                "newDiscussion": "Hey {recipient_display_name},\n{actor_display_name} a commencé une nouvelle discussion: {discussion_title}\nPour afficher cette nouvelle discussion, consultez le lien suivant:\n{discussion_url}\n---\n{post_content}\n",
+                "newUser": "Hey {recipient_display_name},\n{actor_display_name}vient de rejoindre {forum_url}.\nPour afficher le profil de ce nouvel utilisateur, consultez le lien suivant:\n{user_url}\n",
+                "postUnapproved": "Hey {recipient_display_name},\n{actor_display_name} a créé un message qui n’a pas été automatiquement approuvé dans {discussion_title}\nPour voir ce nouveau message, consultez le lien suivant:\n{post_url}\n---\n{post_content}\n"
             }
         }
     }
