--- a/translations/fr/fof-transliterator.json
+++ b/translations/fr/fof-transliterator.json
@@ -2,13 +2,13 @@
     "fof-transliterator": {
         "admin": {
             "settings": {
-                "title": "",
-                "parse_button": "",
-                "result": "",
-                "package_label": "",
-                "package_behat_label": "",
-                "package_php_label": "",
-                "package_php2_label": ""
+                "title": "Paramètres de FoF/Transliterator",
+                "parse_button": "Analyser les discussions existantes",
+                "result": "1 discussion analysée|{count} discussions analysées",
+                "package_label": "Paquet Transliterator",
+                "package_behat_label": "Behat (par défaut)",
+                "package_php_label": "PHP (requiert ext-intl)",
+                "package_php2_label": "PHP #2 (requiert ext-intl)"
             }
         }
     }
