--- a/translations/fr/kvothe-reply-to-see.json
+++ b/translations/fr/kvothe-reply-to-see.json
@@ -1,8 +1,8 @@
 {
     "wiseclock-reply2see": {
         "forum": {
-            "hidden_content": "",
-            "reply_to_see": ""
+            "hidden_content": "CONTENU CACHÉ",
+            "reply_to_see": "Vous devez {reply} et actualiser pour voir le contenu"
         }
     }
 }
