--- a/translations/fr/michaelbelgium-profile-views.json
+++ b/translations/fr/michaelbelgium-profile-views.json
@@ -2,15 +2,15 @@
     "michaelbelgium-flarum-profile-views": {
         "forum": {
             "user": {
-                "last_viewers_heading": "",
-                "view_count_text": ""
+                "last_viewers_heading": "Derniers visiteurs",
+                "view_count_text": "vu {viewcount} fois | vu {viewcount} fois"
             }
         },
         "admin": {
             "settings": {
-                "track_guests_label": "",
-                "max_viewcount_label": "",
-                "title": ""
+                "track_guests_label": "Suivre les invités",
+                "max_viewcount_label": "Éléments maximum de la liste des visiteurs",
+                "title": "Paramètres Profileviews"
             }
         }
     }
